--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'junit:junit:4.12'
+    compile 'org.assertj:assertj-core:3.5.2'
 }
