--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ hs_err_pid*
 ### Gradle ###
 .gradle
 build/
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
 
 # Ignore Gradle GUI config
 gradle-app.setting
